avenir bold fixed and other way of text wrapping realization

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -16,5 +16,5 @@
   font-family: "Avenir Heavy";
   src: url("../fonts/Avenir-Heavy.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal;
+  font-style: bold;
 }
