--- a/src/styles/blocks/_main-content.scss
+++ b/src/styles/blocks/_main-content.scss
@@ -65,17 +65,33 @@
     }
 
     .user-photo {
-      float: left;
       width: 50px;
       height: 50px;
       border-radius: 50%;
       background-color: #c4c4c4;
       margin-right: 20px;
+      margin-top: 0;
+      margin-bottom: 0;
+      grid-column: 1 / 2;
+      grid-row: 1 / 3;
+    }
+
+    .reveiw-conteiner {
+      width: 200px;
+      height: 50px;
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-template-rows: auto auto;
     }
 
     .user-name {
-      margin: 10px 20px;
+      margin: 0;
       font-weight: bold;
+    }
+
+    .review-date {
+      margin: 0;
+      align-self: end;
     }
   }
 
